--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.x' # Specify your .NET version
+          dotnet-version: '8.0.x'
 
       - name: Build
         run: dotnet build --configuration Release
@@ -41,7 +41,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.x' # Specify your .NET version
+          dotnet-version: '8.0.x'
 
       - name: Test
         run: dotnet test
@@ -56,7 +56,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.x' # Specify your .NET version
+          dotnet-version: '8.0.x'
 
       - name: Publish
         run: dotnet publish --configuration Release --output ./publish
