--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -58,7 +58,9 @@ jobs:
         run: dotnet test
 
   publish:
-    needs: test
+    needs:
+      - test
+      - sonarcloud
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
