feat: require all previous jobs to pass before publish

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,6 +61,8 @@ jobs:
     needs:
       - test
       - sonarcloud
+      - build
+      - welcome
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
